# ChirperBench

./: .gitignore  README.md  pyproject.toml
chirperbench/: __init__.py  cases.py  cli.py  judge_codex.py  ollama.py  progress.py  prompt.py  report.py  site.py  telemetry.py  types.py
docs/: index.html
docs/data/: latest-run.json  latest-summary.json
tests/: test_cases.py  test_progress.py  test_prompt.py  test_report.py  test_site.py
